--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>kiddo-activity-spin</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="alternate icon" href="/favicon.ico">
+    <title>Wanderoo - Kids Activity Discovery</title>
+    <meta name="description" content="Discover fun activities for kids with Wanderoo! Spin to find local adventures, outdoor activities, and entertainment for children." />
+    <meta name="author" content="Wanderoo" />
 
-    <meta property="og:title" content="kiddo-activity-spin" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Wanderoo - Kids Activity Discovery" />
+    <meta property="og:description" content="Discover fun activities for kids with Wanderoo! Spin to find local adventures, outdoor activities, and entertainment for children." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
